Moving deploy keys on protected branch to FOSS
Updated AccessDropdown EE component.
Added feature flag.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -9975,6 +9975,9 @@ msgstr ""
 msgid "Failed to load authors. Please try again."
 msgstr ""
 
+msgid "Failed to load deploy keys."
+msgstr ""
+
 msgid "Failed to load emoji list."
 msgstr ""
 
@@ -9985,6 +9988,9 @@ msgid "Failed to load errors from Sentry."
 msgstr ""
 
 msgid "Failed to load group activity metrics. Please try again."
+msgstr ""
+
+msgid "Failed to load groups & users."
 msgstr ""
 
 msgid "Failed to load groups, users and deploy keys."
