--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -9909,6 +9909,9 @@ msgstr ""
 msgid "Failed to load authors. Please try again."
 msgstr ""
 
+msgid "Failed to load deploy keys."
+msgstr ""
+
 msgid "Failed to load emoji list."
 msgstr ""
 
@@ -9919,6 +9922,9 @@ msgid "Failed to load errors from Sentry."
 msgstr ""
 
 msgid "Failed to load group activity metrics. Please try again."
+msgstr ""
+
+msgid "Failed to load groups & users."
 msgstr ""
 
 msgid "Failed to load groups, users and deploy keys."
