Add test functionality to Test button
- Use eventHub to pass click event to old JS which is
responsible for testing the integration.
- Use GlToast to display test result message. Actual copy
and UX still TBD.
- Fully working Test button

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -23302,7 +23302,13 @@ msgstr[1] ""
 msgid "Test failed."
 msgstr ""
 
+msgid "Test settings"
+msgstr ""
+
 msgid "Test settings and save changes"
+msgstr ""
+
+msgid "Test successful!"
 msgstr ""
 
 msgid "TestHooks|Ensure one of your projects has merge requests."
