--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -14963,7 +14963,13 @@ msgstr ""
 msgid "Metrics|Add metric"
 msgstr ""
 
+msgid "Metrics|Add panel"
+msgstr ""
+
 msgid "Metrics|Avg"
+msgstr ""
+
+msgid "Metrics|Back to dashboard"
 msgstr ""
 
 msgid "Metrics|Cancel"
