--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -16484,7 +16484,7 @@ msgstr ""
 msgid "OnDemandScans|Target URL"
 msgstr ""
 
-msgid "Once a project is permanently deleted it <strong>cannot be recovered</strong>. Permanently deleting this project will <strong>immediately delete</strong> its respositories and <strong>all related resources</strong> including issues, merge requests etc."
+msgid "Once a project is permanently deleted it %{strongStart}cannot be recovered%{strongEnd}. Permanently deleting this project will %{strongStart}immediately delete%{strongEnd} its respositories and %{strongStart}all related resources%{strongEnd} including issues, merge requests etc."
 msgstr ""
 
 msgid "Once a project is permanently deleted it cannot be recovered. You will lose this project's repository and all content: issues, merge requests etc."
@@ -24314,10 +24314,10 @@ msgstr ""
 msgid "This action cannot be undone. You will lose the project's respository and all conent: issues, merge requests, etc."
 msgstr ""
 
-msgid "This action will <strong>permanently delete</strong> <code>%{project}</code> <strong>immediately</strong>, including its repositories and all content: issues, merge requests, etc."
+msgid "This action will %{strongOpen}permanently delete%{strongClose} %{codeOpen}%{project}%{codeClose} %{strongOpen}immediately%{strongClose}, including its repositories and all content: issues, merge requests, etc."
 msgstr ""
 
-msgid "This action will <strong>permanently delete</strong> <code>%{project}</code> <strong>on %{date}</strong>, including its repositories and all content: issues, merge requests, etc."
+msgid "This action will %{strongOpen}permanently delete%{strongClose} %{codeOpen}%{project}%{codeClose} %{strongOpen}on %{date}%{strongClose}, including its repositories and all content: issues, merge requests, etc."
 msgstr ""
 
 msgid "This also resolves all related threads"
