--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -19808,6 +19808,9 @@ msgstr ""
 msgid "Remove all or specific label(s)"
 msgstr ""
 
+msgid "Remove approver"
+msgstr ""
+
 msgid "Remove approvers"
 msgstr ""
 
