Add tooltip helper text to cycle metrics
Adds a hoverable tooltip icon to the time
metrics for VSA, adding an explanation of
how each metric is calculated.

Minor refactor of the metric_card

Minor cleanup some utility css

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -14633,6 +14633,12 @@ msgstr ""
 msgid "Median"
 msgstr ""
 
+msgid "Median time from first commit to issue closed."
+msgstr ""
+
+msgid "Median time from issue created to issue closed."
+msgstr ""
+
 msgid "Medium vulnerabilities present"
 msgstr ""
 
