Address minor review feedback
Update tooltip spec to use the
createMockDirective and ensure
we check the content

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -14633,12 +14633,6 @@ msgstr ""
 msgid "Median"
 msgstr ""
 
-msgid "Median time from first commit to issue closed."
-msgstr ""
-
-msgid "Median time from issue created to issue closed."
-msgstr ""
-
 msgid "Medium vulnerabilities present"
 msgstr ""
 
@@ -26377,6 +26371,12 @@ msgid "Value Stream Name"
 msgstr ""
 
 msgid "ValueStreamAnalytics|%{days}d"
+msgstr ""
+
+msgid "ValueStreamAnalytics|Median time from first commit to issue closed."
+msgstr ""
+
+msgid "ValueStreamAnalytics|Median time from issue created to issue closed."
 msgstr ""
 
 msgid "Variable"
