--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -11791,7 +11791,7 @@ msgstr ""
 msgid "GroupSAML|Copy SAML Response XML"
 msgstr ""
 
-msgid "GroupSAML|Default Membership Role"
+msgid "GroupSAML|Default membership role"
 msgstr ""
 
 msgid "GroupSAML|Enable SAML authentication for this group."
