--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -7492,6 +7492,12 @@ msgstr ""
 msgid "DastProfiles|Do you want to discard this site profile?"
 msgstr ""
 
+msgid "DastProfiles|Edit feature will come soon. Please create a new profile if changes needed"
+msgstr ""
+
+msgid "DastProfiles|Error fetching the profiles list. Please check your network connection and try again."
+msgstr ""
+
 msgid "DastProfiles|Manage Profiles"
 msgstr ""
 
@@ -14190,6 +14196,9 @@ msgid "Lists"
 msgstr ""
 
 msgid "Live preview"
+msgstr ""
+
+msgid "Load more"
 msgstr ""
 
 msgid "Loading"
